feat: [core-service] create detail account end point
