# apps/core-service/internal/docs/swagger.json
@@ -243,6 +243,80 @@
             }
         },
         "/accounts/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retrieve the details of an account owned by the authenticated user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts-manage"
+                ],
+                "summary": "Get account details",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Account ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/api.successResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/api.accountuserResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    }
+                }
+            },
             "put": {
                 "security": [
                     {
@@ -257,7 +331,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "accounts"
+                    "accounts-manage"
                 ],
                 "summary": "Update an account",
                 "parameters": [
@@ -340,7 +414,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "accounts"
+                    "accounts-manage"
                 ],
                 "summary": "Delete an account",
                 "parameters": [
@@ -419,7 +493,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "accounts"
+                    "accounts-transaction"
                 ],
                 "summary": "Deposit into an account",
                 "parameters": [
@@ -504,7 +578,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "accounts"
+                    "accounts-transaction"
                 ],
                 "summary": "List account entries",
                 "parameters": [
@@ -542,7 +616,10 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/api.accountEntriesViewResponse"
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/api.accountEntriesViewResponse"
+                                            }
                                         },
                                         "meta": {
                                             "$ref": "#/definitions/api.Meta"
@@ -597,7 +674,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "accounts"
+                    "accounts-transaction"
                 ],
                 "summary": "List recent transfer destinations",
                 "parameters": [
@@ -670,7 +747,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "accounts"
+                    "accounts-transaction"
                 ],
                 "summary": "List account transaction history",
                 "parameters": [
@@ -1110,6 +1187,9 @@
                     "type": "string"
                 },
                 "amount": {
+                    "type": "string"
+                },
+                "description": {
                     "type": "string"
                 },
                 "id": {
